[#46411431] - OTT alignment is corrected in disease page OTT tab same as per other tabs. - Footer text aligned properly.

--- a/css/intermediary.css
+++ b/css/intermediary.css
@@ -2,17 +2,10 @@
 
 html {overflow-x:auto!important;} /* Overflow-x auto causes issue in ie6 for help tab */
 
-html,body {
-	height: 100%;
-	margin:0px;
-	padding: 0px;
-}
-
 body {
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:13px;
 	background-color:#ffffff;
-	width: 100%;
 }
 
 a, a:hover{
